[gd_scene load_steps=7 format=3 uid="uid://bu43d13qwmtcr"]

[ext_resource type="Script" path="res://scenes/market/trade_inventory.gd" id="1_2sbin"]
[ext_resource type="ButtonGroup" uid="uid://di66p0jb8cdpk" path="res://scenes/market/sell_list_button_group.tres" id="2_68j2i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4l2s6"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vqa0t"]
bg_color = Color(0.94902, 0.694118, 0.243137, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_af182"]
bg_color = Color(0.94902, 0.694118, 0.243137, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_as0cg"]
bg_color = Color(0.94902, 0.694118, 0.243137, 1)

[node name="SellList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -700.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2sbin")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="WholeSellListButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_4l2s6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vqa0t")
theme_override_styles/focus = SubResource("StyleBoxFlat_vqa0t")
toggle_mode = true
button_pressed = true
button_group = ExtResource("2_68j2i")
text = "판매목록"

[node name="MySellListButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(240, 70)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_4l2s6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_af182")
theme_override_styles/focus = SubResource("StyleBoxFlat_af182")
toggle_mode = true
button_group = ExtResource("2_68j2i")
text = "내 판매목록"

[node name="ListPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 750)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_as0cg")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ListPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ListPanel/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/ListPanel/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/ListPanel/ScrollContainer/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/WholeSellListButton" to="." method="_on_whole_sell_list_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/MySellListButton" to="." method="_on_my_sell_list_button_down"]
